--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:layout_height="fill_parent">
+    
+<ImageView 
+	android:layout_width="fill_parent" 
+	android:id="@+id/imageView1" 
+	android:src="@drawable/splashscreen" 
+	android:layout_height="fill_parent"
+	></ImageView>
 </LinearLayout>
